Revert "Added data storage functionality and map pulls from database (current error at runtime)"
This reverts commit 9cb5b008d666708a844656bb51791626b1ce4083.

--- a/NeighborhoodHistory/Base.lproj/Main.storyboard
+++ b/NeighborhoodHistory/Base.lproj/Main.storyboard
@@ -928,7 +928,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nrE-3j-ImG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="wnC-l1-Cti" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="367" y="-115"/>
+            <point key="canvasLocation" x="282.60869565217394" y="-115.17857142857142"/>
         </scene>
     </scenes>
     <resources>
