--- a/NeighborhoodHistory/Base.lproj/Main.storyboard
+++ b/NeighborhoodHistory/Base.lproj/Main.storyboard
@@ -81,6 +81,54 @@
             </objects>
             <point key="canvasLocation" x="-686.95652173913049" y="-1414.2857142857142"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="Jp9-i9-r1d">
+            <objects>
+                <viewController id="Y0k-aX-Tr6" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="tr6-40-qMp">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="IMG_9030" translatesAutoresizingMaskIntoConstraints="NO" id="Fmj-MG-nK9">
+                                <rect key="frame" x="-457.5" y="91" width="1329" height="221"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="221" id="xe7-6R-Ttd"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Wortortle Mural" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kbj-i0-s6o">
+                                <rect key="frame" x="20" y="336" width="374" height="37"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This is a description of the mural." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hrk-Cl-M9U">
+                                <rect key="frame" x="20" y="381" width="374" height="98"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="98" id="fHp-bw-vJ2"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Hgg-8y-1Wc"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Fmj-MG-nK9" firstAttribute="top" secondItem="Hgg-8y-1Wc" secondAttribute="top" constant="47" id="1Vx-MU-MmB"/>
+                            <constraint firstItem="Fmj-MG-nK9" firstAttribute="centerX" secondItem="tr6-40-qMp" secondAttribute="centerX" id="2fO-1i-Hpd"/>
+                            <constraint firstItem="Hrk-Cl-M9U" firstAttribute="top" secondItem="Kbj-i0-s6o" secondAttribute="bottom" constant="8" id="Jdq-GP-lQF"/>
+                            <constraint firstItem="Fmj-MG-nK9" firstAttribute="centerX" secondItem="Hrk-Cl-M9U" secondAttribute="centerX" id="cNP-Ka-PGG"/>
+                            <constraint firstItem="Hrk-Cl-M9U" firstAttribute="leading" secondItem="tr6-40-qMp" secondAttribute="leadingMargin" id="fEj-3A-MWr"/>
+                            <constraint firstItem="Hrk-Cl-M9U" firstAttribute="leading" secondItem="Kbj-i0-s6o" secondAttribute="leading" id="owV-RG-yni"/>
+                            <constraint firstItem="Fmj-MG-nK9" firstAttribute="centerX" secondItem="Kbj-i0-s6o" secondAttribute="centerX" id="x3n-jW-Y2B"/>
+                            <constraint firstItem="Kbj-i0-s6o" firstAttribute="top" secondItem="Fmj-MG-nK9" secondAttribute="bottom" constant="24" id="ywa-tJ-IUR"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="spW-Bf-Avp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-688.40579710144937" y="-739.28571428571422"/>
+        </scene>
         <!--Map View Controller-->
         <scene sceneID="AYt-Tg-G3D">
             <objects>
@@ -397,7 +445,7 @@
                                 <color key="textColor" red="0.06037799269" green="0.1606511474" blue="0.1647078991" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" fixedFrame="YES" image="Hedgehog Screen" translatesAutoresizingMaskIntoConstraints="NO" id="7qu-26-Bzv">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" fixedFrame="YES" image="NEIGHBORHOOD HISTORY-2" translatesAutoresizingMaskIntoConstraints="NO" id="7qu-26-Bzv">
                                 <rect key="frame" x="17" y="107" width="380" height="550"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
@@ -829,7 +877,8 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Hedgehog Screen" width="776" height="761"/>
+        <image name="IMG_9030" width="1329" height="1561"/>
+        <image name="NEIGHBORHOOD HISTORY-2" width="1365" height="1365"/>
         <image name="blue_hedhog" width="800" height="800"/>
         <image name="bookmark.fill" catalog="system" width="112" height="128"/>
         <image name="camera.fill" catalog="system" width="128" height="94"/>
