--- a/NeighborhoodHistory/Base.lproj/Main.storyboard
+++ b/NeighborhoodHistory/Base.lproj/Main.storyboard
@@ -44,20 +44,20 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ron-cf-1fe">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Wartortle" translatesAutoresizingMaskIntoConstraints="NO" id="ron-cf-1fe">
                                 <rect key="frame" x="20" y="71" width="374" height="221"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="221" id="0CV-4M-Scr"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lincoln Monument" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rDf-Wc-xKI">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Wartortle Monument" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rDf-Wc-xKI">
                                 <rect key="frame" x="20" y="317" width="374" height="37"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XT3-hm-mgN">
-                                <rect key="frame" x="20" y="385" width="87.5" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A mural of a Wartortle, Pokemon #008, in Chicago's McKinley Park neighborhood" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XT3-hm-mgN">
+                                <rect key="frame" x="20" y="385" width="374" height="41"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -68,11 +68,13 @@
                         <constraints>
                             <constraint firstItem="rDf-Wc-xKI" firstAttribute="centerX" secondItem="MUR-ie-2RW" secondAttribute="centerX" id="0OW-H1-y5g"/>
                             <constraint firstItem="ron-cf-1fe" firstAttribute="leading" secondItem="MUR-ie-2RW" secondAttribute="leadingMargin" id="3hR-Lh-xIa"/>
+                            <constraint firstItem="XT3-hm-mgN" firstAttribute="leading" secondItem="Jd0-j6-02S" secondAttribute="leading" constant="20" id="7Lc-PX-MWd"/>
                             <constraint firstItem="ron-cf-1fe" firstAttribute="leading" secondItem="rDf-Wc-xKI" secondAttribute="leading" id="7S9-bi-pF3"/>
                             <constraint firstItem="ron-cf-1fe" firstAttribute="top" secondItem="Jd0-j6-02S" secondAttribute="top" constant="27" id="DjD-hb-GSE"/>
                             <constraint firstItem="XT3-hm-mgN" firstAttribute="top" secondItem="rDf-Wc-xKI" secondAttribute="bottom" constant="31" id="LBX-t2-Z6m"/>
                             <constraint firstItem="rDf-Wc-xKI" firstAttribute="top" secondItem="ron-cf-1fe" secondAttribute="bottom" constant="25" id="dMy-My-qOl"/>
                             <constraint firstItem="ron-cf-1fe" firstAttribute="centerX" secondItem="MUR-ie-2RW" secondAttribute="centerX" id="dzR-67-FWu"/>
+                            <constraint firstItem="Jd0-j6-02S" firstAttribute="trailing" secondItem="XT3-hm-mgN" secondAttribute="trailing" constant="20" id="h3C-Iu-Xn1"/>
                             <constraint firstItem="ron-cf-1fe" firstAttribute="leading" secondItem="XT3-hm-mgN" secondAttribute="leading" id="v4R-FQ-uCE"/>
                         </constraints>
                     </view>
@@ -879,6 +881,7 @@
     <resources>
         <image name="IMG_9030" width="1329" height="1561"/>
         <image name="NEIGHBORHOOD HISTORY-2" width="1365" height="1365"/>
+        <image name="Wartortle" width="4032" height="3024"/>
         <image name="blue_hedhog" width="800" height="800"/>
         <image name="bookmark.fill" catalog="system" width="112" height="128"/>
         <image name="camera.fill" catalog="system" width="128" height="94"/>
